--- a/render_engine_lunr/templates/components/lunrjs/lunr_search.html
+++ b/render_engine_lunr/templates/components/lunrjs/lunr_search.html
@@ -1,12 +1,12 @@
 {% macro search_form() %}
 <form action="javascript:void(0);" onsubmit="search()">
-    <input type="text" id="lunrSearchInput" placeholder="Search..." oninput="updateSearchResults()">
-    <button type="submit" id="lunrSearchButton">Search</button>
+    <input type="text" id="lunrSearchInput" aria-label="Search" placeholder="Search" oninput="updateSearchResults()">
 </form>
 {% endmacro %}
 
 {% macro search_script(corpus="/corpus.json", search_index="/lunr_index.json") %}
 <script>
+
 var idx = fetch("{{search_index}}", )
     .then(response => response.json())
     .then(data => {
@@ -33,6 +33,13 @@ function search() {
     // Get the value for the text field
     var query = document.getElementById('lunrSearchInput').value;
     // run the query
+
+    if (query.length === 0) {
+        var searchResults = document.getElementById('lunrSearchResults');
+        searchResults.innerHTML = '';
+        return
+    }
+
     var result = idx.search(query);
     // Update the list with the search results
 
