manual call for page

--- a/docs/templates/archive.html
+++ b/docs/templates/archive.html
@@ -2,6 +2,8 @@
 {% block content %}
 <div class="container">
     <h1 class="title">{{title}}</h1>
-    {{super()}}
+    {% for page in pages %}
+    <div><a href="{{SITE_URL}}{{page.url_for()}}">{{page}}</a></div>
+    {% endfor %}
 </div>
 {% endblock %}
